# BuddyTypeCLI

./: .gitignore  Cargo.toml  README.md  install.sh  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: release.yml
data/languages/: english.json
data/themes/: monkeytype_themes.json
src/: app.rs  app.tsx  cli.tsx  lib.rs  main.rs  types.rs
src/components/: header.tsx  language-picker.tsx  results-chart.tsx  stats-bar.tsx  word-display.tsx
src/config/: store.rs  store.ts
src/data/: languages.rs  mod.rs  themes.rs
src/data/languages/: _list.json  index.ts
src/data/themes/: monkeytype-themes.ts
src/engine/: input-processor.ts  input_processor.rs  mod.rs  stats-calculator.ts  stats_calculator.rs  timer.rs  timer.ts  word-generator.ts  word_generator.rs
src/hooks/: use-timer.ts  use-typing-test.ts
src/screens/: menu-screen.tsx  menu.rs  mod.rs  results-screen.tsx  results.rs  scores-screen.tsx  scores.rs  test-screen.tsx  test.rs
src/themes/: index.ts
src/types/: language.ts  stats.ts  test.ts  theme.ts
src/ui/: header.rs  mod.rs  picker.rs  results_chart.rs  stats_bar.rs  word_display.rs
tests/: input_processor_test.rs  integration_test.rs  stats_calculator_test.rs  timer_test.rs  word_generator_test.rs
tests/data/: languages.test.ts
tests/engine/: input-processor.test.ts  integration.test.ts  stats-calculator.test.ts  timer.test.ts  word-generator.test.ts
tests/themes/: index.test.ts
