[package]
name = "buddytype"
version = "0.1.0"
edition = "2024"
description = "A MonkeyType clone for the terminal — fast, interactive typing tests in your CLI"
license = "GPL-3.0-only"
keywords = ["typing", "monkeytype", "cli", "tui", "wpm"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
